maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:50: error: ';' expected but 'else' found.
  else {return 0}
  ^Escaper:53: error: Unmatched closing brace '}' ignored here
}
^